# Kage

./: .gitignore  Cargo.toml  README.md  check_balance.sh  tokens.txt  watchlist.txt
docs/diagrams/: README.md  component-interaction.md  data-flow.md  database-structure.md  processing-pipeline.md  query-flow.md  system-architecture.md
src/: apply.rs  cache.rs  cli.rs  config.rs  fee.rs  keys.rs  lib.rs  main.rs  records.rs  rpc.rs  store.rs  trace.rs  tracker.rs  tracker_erc20.rs  types.rs  watcher.rs  watcher_main.rs
